# mon

./: Cargo.toml  LICENSE  Makefile  README.md  SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md
scripts/: install.sh  release.sh
src/: browser.rs  cli.rs  client.rs  install.rs  main.rs  output.rs  paths.rs  queries.rs  rent.rs  session.rs
